--- a/cohorts/2024/01-docker-terraform/2_docker_sql/docker-compose.yaml
+++ b/cohorts/2024/01-docker-terraform/2_docker_sql/docker-compose.yaml
@@ -9,15 +9,15 @@ services:
       - "./ny_taxi_postgres_data:/var/lib/postgresql/data:rw"
     ports:
       - "5432:5432"
-  pdadmin:
+  pgadmin:
     image: dpage/pgadmin4
     environment:
       - PGADMIN_DEFAULT_EMAIL=admin@admin.com
       - PGADMIN_DEFAULT_PASSWORD=root
     volumes:
-      - "pgadmin_conn_data:/var/lib/pgadmin:rw"
+      - "pdadmin_data:/var/lib/pgadmin:rw"
     ports:
       - "8080:80"
 
 volumes:
-  pgadmin_conn_data:
+  pdadmin_data:
